# CuteAvalance

libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  main.cpp
src/Graphic/: CMakeLists.txt
src/Graphic/include/Graphic/: Window.hpp
src/Graphic/src/: Window.cpp
